<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_consumer"
    app:startDestination="@+id/navigation_producer">

    <fragment
        android:id="@+id/navigation_producer"
        android:name="com.dsv.td1.si3_ihm_aliments.ui_consumer.producer.ProducerFragment"
        android:label="@string/title_producer"
        tools:layout="@layout/fragment_producer_consumer" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.dsv.td1.si3_ihm_aliments.ui_consumer.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map_consumer" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dsv.td1.si3_ihm_aliments.ui_consumer.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile_consumer2" />
</navigation>