<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/start_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_client"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.426" />

    <Button
        android:id="@+id/start_producteur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_producteur"
        app:layout_constraintBottom_toTopOf="@+id/start_client"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.525" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="90dp"
        android:accessibilityHeading="false"
        android:autoSizeTextType="none"
        android:text="@string/intro"
        android:textAllCaps="true"
        android:textFontWeight="30"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/start_image"
        android:layout_width="500dp"
        android:layout_height="250dp"
        android:layout_marginTop="40dp"
        android:contentDescription="SacFruitsLegumes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_client"
        app:srcCompat="@drawable/market" />
</androidx.constraintlayout.widget.ConstraintLayout>